metadata/force-app/main/default/objects/CustomName_FuxFd__c/CustomName_FuxFd__c.object-meta.xml
<CustomObject>
    <description>Description_COtNf</description>
    <label>CustomLabel_ofeKG</label>
    <nameField>
        <label>CustomLabel_ofeKG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ofeKGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>