metadata/force-app/main/default/objects/CustomName_FuxFd__c/fields/CustomField_cNIqG__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cNIqG__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldeQKUw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>