metadata/force-app/main/default/objects/CustomName_FuxFd__c/fields/CustomField_zlosq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zlosq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgDqNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>